[tool.poetry]
name = "wetb"
version = "0.1.0"
description = "The Wind Energy Toolbox (or wetb, pronounce as wee-tee-bee) is a collection of Python scripts that facilitate working with (potentially a lot) of HAWC2, HAWCStab2, FAST or other text input based simulation tools."
authors = ["Your Name <you@example.com>"]
license = "wetb is free software; you can redistribute it and/or modify it under the terms of the GNU General Public License (GPL, http://www.gnu.org/copyleft/gpl.html) as published by the Free Software Foundation; either version 3 of the License, or (at your option) any later version. wetb is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU General Public License for more details http://www.gnu.org/licenses/ We encourage you to submit new code for possible inclusion in future versions of wetb."
readme = "README.md"

[tool.poetry.dependencies]
click = "^8.0.4"
Cython = {version="^0.29.35", optional=true}
h5py = "^3.1.0"
Jinja2 = "^3.0.3"
lxml = "^4.9.2"
matplotlib = "^3.3.4"
mock = "^5.0.2"
numpy = ">=1.4"
openpyxl =  { version = "^3.1.2", optional = true }
pandas = "^1.1.5"
paramiko = {version="^3.2.0", optional = true}
psutil = "^5.9.5"
pytest = "^7.0.1"
pytest-cov = "^4.0.0"
python = "^3.6"
scipy = ">=0.9.0"
sshtunnel = {version="^0.4.0", optional = true}
tables = {version="^3.7.0", optional=true}
tqdm = "^4.64.1"
wafo = {version="^0.1.2", optional=true}
xlwt = {version="^1.3.0", optional=true}
XlsxWriter = "^3.1.2"

[tool.poetry.extras]
prepost = ["openpyxl", "tables", "wafo", "xlwt", "Cython"]
all = ["openpyxl", "tables", "wafo", "xlwt", "Cython", "paramiko", "sshtunnel"]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
