[build-system]
requires = [
    "setuptools>=60",
    "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "wetb"
authors = [{name="DTU Wind and Energy Systems"}]
description = ""The Wind Energy Toolbox (or ```wetb```, pronounce as wee-tee-bee) is a collection of Python scripts that facilitate working with (potentially a lot) of HAWC2, HAWCStab2, FAST or other text input based simulation tools."
dependencies = [
    'click',
	'Cython',
	'h5py',
	'Jinja2',
	'lxml',
	'matplotlib',
	'pillow',
	'mock',
	'numpy',
    'numba',
    'openpyxl',
    'pandas',
    'paramiko',
    'psutil',
    'pytest',
    'pytest-cov',
    'scipy',
    'sshtunnel',
    'tables',
    'tqdm',
    'wafo',
    'xlwt',
    'XlsxWriter',
]
license = "wetb is free software; you can redistribute it and/or modify it under the terms of the GNU General Public License (GPL, http://www.gnu.org/copyleft/gpl.html) as published by the Free Software Foundation; either version 3 of the License, or (at your option) any later version.  wetb is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU General Public License for more details http://www.gnu.org/licenses/  We encourage you to submit new code for possible inclusion in future versions of wetb."
repository = "https://gitlab.windenergy.dtu.dk/toolbox/WindEnergyToolbox"
documentation = "https://toolbox.pages.windenergy.dtu.dk/WindEnergyToolbox/"
dynamic = ["version"]

[project.optional-dependencies]
prepost = ["openpyxl", "tables", "wafo", "xlwt", "Cython"]
all = ["openpyxl", "tables", "wafo", "xlwt", "Cython", "paramiko", "sshtunnel", 'pytest', 'mock', 'click']

[tool.setuptools_scm]
version_file = "app_utils/version.py"